--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
 asgiref==3.2.3
+certifi==2019.11.28
+chardet==3.0.4
+coverage==5.0.2
 Django==3.0.2
 djangorestframework==3.11.0
 entrypoints==0.3
 flake8==3.7.9
+idna==2.8
 mccabe==0.6.1
 pycodestyle==2.5.0
 pyflakes==2.1.1
+python-coveralls==2.9.3
 pytz==2019.3
+PyYAML==5.2
+requests==2.22.0
+six==1.13.0
 sqlparse==0.3.0
+urllib3==1.25.7
