--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ virtualenv:
 install:
   - pip install -r requirements.txt
 script: flake8
+script: python pollsapi/manage.py test
 after_success:
   - coveralls
 #jobs:
