--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ virtualenv:
   system_site_packages: true
 install:
   - pip install -r requirements.txt
-script: flake8
-script: python pollsapi/manage.py test
+script:
+  - flake8
+  - python pollsapi/manage.py test
+  - coverage run --source=. pollsapi/manage.py test
 after_success:
   - coveralls
 #jobs:
