--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ install:
   - pip install -r requirements.txt
 script:
   - flake8
-  - python pollsapi/manage.py test
-  - coverage run --source=. pollsapi/manage.py test
+  - python pollsapi/manage.py test pollsapi
+  - coverage run --source=pollsapi/polls pollsapi/manage.py test pollsapi
 after_success:
   - coveralls
 #jobs:
