--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.2.3
 certifi==2019.11.28
 chardet==3.0.4
 coverage==5.0.2
+coveralls==1.10.0
 Django==3.0.2
 djangorestframework==3.11.0
+docopt==0.6.2
 entrypoints==0.3
 flake8==3.7.9
 idna==2.8
