--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ dist: bionic
 git:
   clone: true
   autocrlf: true
-virtualenv:
-  system_site_packages: true
+#virtualenv:
+#  system_site_packages: true
 install:
   - pip install -r requirements.txt
 script:
